--- a/server/views/books/details.ejs
+++ b/server/views/books/details.ejs
@@ -9,22 +9,27 @@
               <div class="form-group">
                 <label for="NameTextField">Title</label>
                 <input type="text" class="form-control" id="NameTextField"
-                placeholder="Book Name" name="title" value="<%= books.Title %>" required>
+                placeholder="Book Name" name="title" value="<%= books && books.Title %>" required>
+              </div>
+              <div class="form-group">
+                <label for="DescriptionTextField">Description</label>
+                <input type="text" class="form-control" id="DescriptionTextField"
+                placeholder="Description" name="description" value="<%= books && books.Description %>" required>
               </div>
               <div class="form-group">
                 <label for="PriceTextField">Price</label>
-                <input type="text" class="form-control" id="PriceTextField"
-                placeholder="Book Price" name="price" value="<%= books.Price %>"  required>
+                <input type="number" class="form-control" id="PriceTextField"
+                placeholder="Book Price" name="price" value="<%= books && books.Price %>"  required>
               </div>
               <div class="form-group">
                 <label for="AuthorTextField">Author</label>
                 <input type="text" class="form-control" id="AuthorTextField"
-                placeholder="Book Author" name="author" value="<%= books.Author %>"  required>
+                placeholder="Book Author" name="author" value="<%= books && books.Author %>"  required>
               </div>
               <div class="form-group">
                 <label for="GenreTextField">Genre</label>
                 <input type="text" class="form-control" id="GenreTextField"
-                placeholder="Book Genre" name="genre" value="<%= books.Genre %>"  required>
+                placeholder="Book Genre" name="genre" value="<%= books && books.Genre %>"  required>
               </div>
 
               <button type="submit" class="btn btn-primary"><i class="fa fa-check-square-o"></i> Submit</button>
